improve(opensearch): 11788 Implement ImportIndexWriterOS (#11789)
Co-authored-by: Oleksandr Kriuchenko <oleksandr.kriuchenko-ext@camunda.com>